--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Calendar">
     <include
-        android:id="@+id/toolbar_crops"
+        android:id="@+id/toolbar_calendar"
         layout="@layout/toolbar" />
 
     <com.github.sundeepk.compactcalendarview.CompactCalendarView
@@ -26,7 +26,7 @@
         app:compactCalendarTextSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_crops" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_calendar" />
 
     <ListView
         android:id="@+id/calendar_listview"
