Added animals section (work in progress) Added custom dialog Upgraded listviews

--- a/app/src/main/res/layout/activity_crops_detailed.xml
+++ b/app/src/main/res/layout/activity_crops_detailed.xml
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cropsDetailed_acres_pt" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/crops_detailed_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
