--- a/app/src/main/res/layout/activity_new_calendar_event.xml
+++ b/app/src/main/res/layout/activity_new_calendar_event.xml
@@ -46,7 +46,7 @@ tools:context=".NewCalendarEvent">
         tools:text="@string/str_calendar_date" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/weather_textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
@@ -67,7 +67,7 @@ tools:context=".NewCalendarEvent">
         android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.663"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/weather_textView5"
         app:layout_constraintTop_toBottomOf="@+id/newCalendarEvent_date_tv" />
 
     <TextView
