--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -11,46 +11,46 @@
         layout="@layout/toolbar" />
 
     <Button
-        android:id="@+id/agenda_calendar_btn"
+        android:id="@+id/agenda_Calendar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/str_agenda_calendar"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        android:text="@string/str_agenda_Calendar"
+        app:layout_constraintEnd_toStartOf="@+id/agenda_ToDoList_btn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_agenda" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/agenda_ToDoList_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/str_agenda_todo_list"
+        android:text="@string/str_agenda_TodoList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/agenda_calendar_btn"
+        app:layout_constraintStart_toEndOf="@+id/agenda_Calendar_btn"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_agenda" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/agenda_Notes_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/str_agenda_notes"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
+        android:text="@string/str_agenda_Notes"
+        app:layout_constraintEnd_toStartOf="@+id/agenda_Inventory_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/agenda_calendar_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/agenda_Calendar_btn" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/agenda_Inventory_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/str_agenda_inventory"
+        android:text="@string/str_agenda_Inventory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintStart_toEndOf="@+id/agenda_Notes_btn"
+        app:layout_constraintTop_toBottomOf="@+id/agenda_ToDoList_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
