--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_calendar" />
 
     <ListView
-        android:id="@+id/calendar_listview"
+        android:id="@+id/calendar_ListView"
         android:layout_width="409dp"
         android:layout_height="350dp"
         android:layout_marginTop="1dp"
@@ -38,14 +38,14 @@
         app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view" />
 
     <Button
-        android:id="@+id/calendar_new_btn"
+        android:id="@+id/calendar_New_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/str_calendar_new"
+        android:text="@string/str_calendar_New"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendar_listview" />
+        app:layout_constraintTop_toBottomOf="@+id/calendar_ListView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
