--- a/app/src/main/res/layout/activity_animals_detailed.xml
+++ b/app/src/main/res/layout/activity_animals_detailed.xml
@@ -30,7 +30,18 @@
         android:text="@string/str_animals_detailed_AddFeature"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/animals_detailed_Delete_btn" />
+
+    <Button
+        android:id="@+id/animals_detailed_Delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:text="@string/str_animals_detailed_Delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animals_detailed_ListView"
+        app:layout_constraintVertical_bias="0.555" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
