--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -241,7 +241,7 @@
                 android:textColor="#FF000000"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/weather_textView5" />
+                app:layout_constraintTop_toBottomOf="@+id/calendar_new_event_Task_tv" />
 
             <TextView
                 android:id="@+id/weather_textView16"
@@ -324,7 +324,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/weather_textView20" />
 
             <TextView
-                android:id="@+id/weather_textView5"
+                android:id="@+id/calendar_new_event_Task_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -346,7 +346,7 @@
                 android:text=": Feels Like"
                 android:textColor="#FF000000"
                 android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/weather_textView5"
+                app:layout_constraintStart_toEndOf="@+id/calendar_new_event_Task_tv"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
