--- a/app/src/main/res/layout/activity_calendar_event_details.xml
+++ b/app/src/main/res/layout/activity_calendar_event_details.xml
@@ -102,5 +102,16 @@
         app:layout_constraintTop_toBottomOf="@+id/calendar_event_details_Task_tv"
         app:layout_constraintVertical_bias="0.507" />
 
+    <Button
+        android:id="@+id/calendar_event_details_DeleteEvent_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:text="@string/str_calendar_event_details_DeleteEvent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendar_event_details_Task_pt" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
