--- a/app/src/main/res/layout/activity_animals_detailed.xml
+++ b/app/src/main/res/layout/activity_animals_detailed.xml
@@ -26,22 +26,34 @@
         android:id="@+id/animals_detailed_AddFeature_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/str_animals_detailed_AddFeature"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/animals_detailed_Delete_btn" />
 
     <Button
         android:id="@+id/animals_detailed_Delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="168dp"
         android:text="@string/str_animals_detailed_Delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/animals_detailed_ListView"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintVertical_bias="0.589" />
+
+    <Button
+        android:id="@+id/animals_detailed_ToDo_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/str_animals_detailed_ToDo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/animals_detailed_Delete_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animals_detailed_ListView"
+        app:layout_constraintVertical_bias="0.589" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
