--- a/app/src/main/res/layout/activity_animals_to_do.xml
+++ b/app/src/main/res/layout/activity_animals_to_do.xml
@@ -18,4 +18,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_animals_to_do" />
 
+    <Button
+        android:id="@+id/animals_to_do_Add_Btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/str_animals_to_do_Add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
